--- a/conky/sidecard_conky_by_mzpsh_d9gzhjv/.conkyrc
+++ b/conky/sidecard_conky_by_mzpsh_d9gzhjv/.conkyrc
@@ -1,7 +1,7 @@
 -- vim: ts=4 sw=4 noet ai cindent syntax=lua
 
 conky.config = {
-	alignment = 'middle_right',
+	alignment = 'middle_middle',
 	background = false,
 	cpu_avg_samples = 2,
 	default_color = 'FFFFFF',
@@ -13,7 +13,7 @@ conky.config = {
 	use_xft = true,
 	font = 'Roboto Light:size=21',
 	gap_x = 0,
-	gap_y = 50,
+	gap_y = 0,
 	minimum_height = 472,
 	minimum_width = 395,
 	maximum_width = 395,
@@ -23,13 +23,12 @@ conky.config = {
 	own_window = true,
 	own_window_transparent = true,
 	--own_window_colour = '333333',
-	own_window_argb_visual = true,
+	--own_window_argb_visual = true,
 	--own_window_argb_value = 63,
 	own_window_class = 'normal',
 	own_window_type = 'desktop',
 	own_window_hints = 'undecorated,skip_taskbar,skip_pager,below',
-	draw_blended = false,
-	update_interval = 1,
+	update_interval = 1,,
 	update_interval_on_battery = 5,
 	--mpd_host = 'localhost',
 	--mpd_port = 6600,
