--- a/i3/config
+++ b/i3/config
@@ -129,16 +129,16 @@ bindsym $mod+a focus parent
 # set $ws8 "8: 音楽 ♫ "
 # set $ws9 "9: 設定  "
 # set $ws10 "10:システム  "
-set $ws1 " 1: "
-set $ws2 " 2: "
-set $ws3 " 3: "
-set $ws4 " 4: "
-set $ws5 " 5: "
-set $ws6 " 6: "
-set $ws7 " 7: "
-set $ws8 " 8:♫ "
-set $ws9 " 9: "
-set $ws10 " 10: "
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -249,14 +249,16 @@ mode "move" {
 
 
 # colors
-set $bg-color            #e0dfd5 
-set $focused-bg-color 	 #313638 
-set $inactive-bg-color   #e8e9eb 
-set $text-color          #f09d51 
-set $urgent-text-color   #e8e9eb 
+
+set $bg-color            #e5e9f0
+set $focused-bg-color 	 #81a1c1 
+set $inactive-bg-color   #e5e9f0
+set $text-color          #eceff4 
+set $urgent-text-color   #eceff4 
 set $inactive-text-color #869296 
-set $urgent-bg-color     #f97214 
-set $indicator           #74bdcb 
+set $urgent-bg-color     #bf616a 
+set $indicator           #FF91A4 
+
 
 # window colors
 #                       border              background         text                 indicator
@@ -268,18 +270,19 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $urgent-text-colo
 # #exec_always --no-startup-id /home/xuantung/.config/i3/polybar/launch.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	#status_command i3status -c ~/.config/i3/i3status.conf
-	colors {
-		background $bg-color
-	    	separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $focused-bg-color  $text-color
-		inactive_workspace $bg-color 	      $bg-color          $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $urgent-text-color
-	}
-}
+# bar {
+#         status_command i3blocks -c ~/.config/i3/i3blocks.conf
+# 	#status_command i3status -c ~/.config/i3/i3status.conf
+# 	colors {
+# 		background $bg-color
+# 	    	separator #757575
+# 		#                  border             background         text
+# 		focused_workspace  $bg-color          $focused-bg-color  $text-color
+# 		inactive_workspace $bg-color 	      $bg-color          $inactive-text-color
+# 		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $urgent-text-color
+# 	}
+# }
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # multimedia keys
 # Pulse Audio controls
@@ -295,7 +298,7 @@ bindsym Control+Super_R exec --no-startup-id xfce4-screenshooter -w
 bindsym Control+Shift+Super_R exec --no-startup-id xfce4-screenshooter -r 
 
 # wallpaper
-exec_always feh --bg-scale /home/xuantung/Pictures/walls/sushi.jpg 
+exec_always feh --bg-fill /home/xuantung/.local/share/backgrounds/sushi/sushi_pink-switch.jpg 
 
 # startup
 exec_always --no-startup-id ibus-daemon #input methods
@@ -304,8 +307,149 @@ exec --no-startup-id redshift-gtk  #limit bluelight, prevent eyestrain
 exec --no-startup-id xfce4-power-manager # energy consumption
 exec --no-startup-id blueman-applet #bluetooth
 exec --no-startup-id thunderbird #mail client
-exec --no-startup-id picom #compositor
+exec_always --no-startup-id picom #compositor
 exec --no-startup-id xfce4-clipman #clipboard
 exec --no-startup-id goldendict #dictionary
 exec --no-startup-id xmodmap ~/.Xmodmap #keyboard
+    # imwheel
+exec_always killall imwheel
+exec_always imwheel
+
+
+### i3-gaps stuff ###
+
+# Necessary for i3-gaps to work properly (pixel can be any value)
+for_window [class="^.*"] border pixel 5 
+
+# Smart Gaps
+smart_gaps on
+
+# Smart Borders
+smart_borders on
+
+# Set inner/outer gaps
+gaps inner 14
+gaps outer 0
+
+# Gaps mode
+set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $mod+Shift+g mode "$mode_gaps"
+
+mode "$mode_gaps" {
+        bindsym o      mode "$mode_gaps_outer"
+        bindsym i      mode "$mode_gaps_inner"
+        bindsym h      mode "$mode_gaps_horiz"
+        bindsym v      mode "$mode_gaps_verti"
+        bindsym t      mode "$mode_gaps_top"
+        bindsym r      mode "$mode_gaps_right"
+        bindsym b      mode "$mode_gaps_bottom"
+        bindsym l      mode "$mode_gaps_left"
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+
+mode "$mode_gaps_outer" {
+        bindsym plus  gaps outer current plus 5
+        bindsym minus gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
+
+        bindsym Shift+plus  gaps outer all plus 5
+        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+0     gaps outer all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_inner" {
+        bindsym plus  gaps inner current plus 5
+        bindsym minus gaps inner current minus 5
+        bindsym 0     gaps inner current set 0
+
+        bindsym Shift+plus  gaps inner all plus 5
+        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+0     gaps inner all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_horiz" {
+        bindsym plus  gaps horizontal current plus 5
+        bindsym minus gaps horizontal current minus 5
+        bindsym 0     gaps horizontal current set 0
+
+        bindsym Shift+plus  gaps horizontal all plus 5
+        bindsym Shift+minus gaps horizontal all minus 5
+        bindsym Shift+0     gaps horizontal all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_verti" {
+        bindsym plus  gaps vertical current plus 5
+        bindsym minus gaps vertical current minus 5
+        bindsym 0     gaps vertical current set 0
+
+        bindsym Shift+plus  gaps vertical all plus 5
+        bindsym Shift+minus gaps vertical all minus 5
+        bindsym Shift+0     gaps vertical all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_top" {
+        bindsym plus  gaps top current plus 5
+        bindsym minus gaps top current minus 5
+        bindsym 0     gaps top current set 0
+
+        bindsym Shift+plus  gaps top all plus 5
+        bindsym Shift+minus gaps top all minus 5
+        bindsym Shift+0     gaps top all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_right" {
+        bindsym plus  gaps right current plus 5
+        bindsym minus gaps right current minus 5
+        bindsym 0     gaps right current set 0
+
+        bindsym Shift+plus  gaps right all plus 5
+        bindsym Shift+minus gaps right all minus 5
+        bindsym Shift+0     gaps right all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_bottom" {
+        bindsym plus  gaps bottom current plus 5
+        bindsym minus gaps bottom current minus 5
+        bindsym 0     gaps bottom current set 0
+
+        bindsym Shift+plus  gaps bottom all plus 5
+        bindsym Shift+minus gaps bottom all minus 5
+        bindsym Shift+0     gaps bottom all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_left" {
+        bindsym plus  gaps left current plus 5
+        bindsym minus gaps left current minus 5
+        bindsym 0     gaps left current set 0
+
+        bindsym Shift+plus  gaps left all plus 5
+        bindsym Shift+minus gaps left all minus 5
+        bindsym Shift+0     gaps left all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "default"
+}
 
